# project_template

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/: print.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: print_test.cpp
